Added To Olkaria, Interior, etc

--- a/Desktop/portfolio/index.html
+++ b/Desktop/portfolio/index.html
@@ -7,6 +7,7 @@
     <meta name="robots" content="noindex, nofollow" />
     <meta name="googlebot" content="noindex, nofollow" />
     <title>KOH</title>
+    <script defer src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/p5.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
